--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,7 @@
 {
-    "autoload": {
-        "psr-4": {
-            "Application\\": "app/Application"
-        }
-    },
     "require": {
         "slim/slim": "^2.6",
         "slim/views": "^0.1.3",
-        "twig/twig": "^1.21",
-        "Illuminate/database": "~5.0"
+        "twig/twig": "^1.21"
     }
 }
