--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "require": {
-        "slim/slim": "^2.6",
-        "slim/views": "^0.1.3",
-        "twig/twig": "^1.23",
-        "gorka/dot-notation-access": "^1.0"
+        "slim/slim": "^3.0",
+        "gorka/dot-notation-access": "^1.0",
+        "slim/twig-view": "^2.0",
+        "twig/twig": "^1.23"
     }
 }
